rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x501_1997-TC1_EnhancedSecurity.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x501_1997-TC1_EnhancedSecurity.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 83, column 2]
    │
    │ 
 83 │  encrypted PROTECTION-MAPPING ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 84 │    SECURITY-TRANSFORMATION  {genEncryptedTransform  {{...} --to be defined--}}
 85 │  }
    │
────╯
